<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="submitAnswers">Submit Answers</string>
    <string name="answerQuestions">Answer the following questions:</string>
    <string name="question01">1.) Sjusjoen is a place in which country?</string>
    <string name="answer01">Norway</string>
    <string name="hintEnterText">Enter your answer here.</string>
    <string name="question02">2.) Obertilliach is a place in which country?</string>
    <string name="answer02_1">Norway</string>
    <string name="answer02_2">Italy</string>
    <string name="answer02_3">Germany</string>
    <string name="answer02_4">Switzerland</string>
    <string name="answer02_5">Austria</string>
    <string name="question03">3.) In which country was this picture taken?</string>
    <string name="answer03">Costa Rica</string>
    <string name="question04">4.) At Lenzerheide the first IBU Cup was held in?</string>
    <string name="answer04_1">2015</string>
    <string name="answer04_2">2016</string>
    <string name="answer04_3">2017</string>
    <string name="question05">5.) The picture was taken at?</string>
    <string name="answer05_2">Veltins Arena Gelsenkirchen</string>
    <string name="question06_1">6.) The Canoe ______ Worldchampionships 2017 were held at Pau in France.</string>
    <string name="question06_2">Worldchampionships 2017 were held at Pau in France.</string>
    <string name="answer06">Slalom</string>
    <string name="question07">7.) Which picture was taken at Cunovo?</string>
    <string name="question08">8.) What gates are visibile in the picture?</string>
    <string name="answer08_1">1, 2, 3, 4</string>
    <string name="answer08_2">1, 2, 3, 5</string>
    <string name="answer08_3">4, 5</string>
    <string name="answer08_4">11, 12, 13, 14, 15</string>
    <string name="question09">9.) Troja at the river Vltava is a district of what city?</string>
    <string name="answer09">Prague</string>
    <string name="question10">10.) What races are not Biathlon races?</string>
    <string name="answer10_1">Sprint</string>
    <string name="answer10_2">Skiathlon</string>
    <string name="answer10_3">Massstart</string>
    <string name="answer10_4">Parallel Slalom</string>
    <string name="answer10_5">Pursuit</string>
    <string name="answer05_1">Rupolding Biathlon Arena</string>
    <string name="answer05_3">DKB Ski Arena Oberhof</string>
    <string name="answer08_5">1, 2, 3</string>
    <string name="well_done">Great! Well done!</string>
    <string name="not_well_done">"You have to correct the answers to following questions: "</string>
</resources>
