<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="it.seahawk.myquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/answerquestions"
            style="@style/SubHeaderTextStyle"
            android:text="@string/answerQuestions"/>

        <TextView
            android:id="@+id/question01"
            style="@style/BodyTextStyle"
            android:text="@string/question01"/>

        <EditText
            android:id="@+id/answer01"
            style="@style/BodyTextStyle"
            android:hint="@string/hintEnterText"
            android:inputType="textCapWords"/>

        <TextView
            android:id="@+id/question02"
            style="@style/BodyTextStyle"
            android:text="@string/question02"/>

        <RadioGroup
            android:id="@+id/answer02_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer02_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer02_1"
                android:theme="@style/RadioButtons"/>

            <RadioButton
                android:id="@+id/answer02_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer02_2"
                android:theme="@style/RadioButtons"/>

            <RadioButton
                android:id="@+id/answer02_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer02_3"
                android:theme="@style/RadioButtons"/>

            <RadioButton
                android:id="@+id/answer02_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer02_4"
                android:theme="@style/RadioButtons"/>

            <RadioButton
                android:id="@+id/answer02_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer02_5"
                android:theme="@style/RadioButtons"/>
        </RadioGroup>

        <TextView
            android:id="@+id/question03"
            style="@style/BodyTextStyle"
            android:text="@string/question03"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150sp"
                android:layout_height="120sp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/question03_picture"/>

            <EditText
                android:id="@+id/answer03"
                style="@style/BodyTextStyle"
                android:hint="@string/hintEnterText"
                android:inputType="textCapWords"/>
        </LinearLayout>

        <TextView
            android:id="@+id/question04"
            style="@style/BodyTextStyle"
            android:text="@string/question04"/>

        <RadioGroup
            android:id="@+id/answer04_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer04_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer04_1"
                android:theme="@style/RadioButtons"/>

            <RadioButton
                android:id="@+id/answer04_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer04_2"
                android:theme="@style/RadioButtons"/>

            <RadioButton
                android:id="@+id/answer04_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer04_3"
                android:theme="@style/RadioButtons"/>

        </RadioGroup>

        <TextView
            android:id="@+id/question05"
            style="@style/BodyTextStyle"
            android:text="@string/question05"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="266dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/question05_picture"/>

            <RadioGroup
                android:id="@+id/answer05_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/answer05_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer05_1"
                    android:theme="@style/RadioButtons"/>

                <RadioButton
                    android:id="@+id/answer05_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer05_2"
                    android:theme="@style/RadioButtons"/>

                <RadioButton
                    android:id="@+id/answer05_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer05_3"
                    android:theme="@style/RadioButtons"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question06_1"
                style="@style/BodyTextStyle"
                android:text="@string/question06_1"/>

            <EditText
                android:id="@+id/answer06"
                style="@style/BodyTextStyle"
                android:hint="@string/hintEnterText"
                android:inputType="textCapWords"/>

        </LinearLayout>

        <TextView
            android:id="@+id/question07"
            style="@style/BodyTextStyle"
            android:text="@string/question07"/>

        <RadioGroup
            android:id="@+id/answer07_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer07_1"
                android:drawableRight="@drawable/answer07_1_picture"
                android:theme="@style/RadioButtonsPictures">
            </RadioButton>

            <RadioButton
                android:id="@+id/answer07_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/answer07_2_picture"
                android:theme="@style/RadioButtonsPictures"/>

            <RadioButton
                android:id="@+id/answer07_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/answer07_3_picture"
                android:theme="@style/RadioButtonsPictures"/>

        </RadioGroup>

        <TextView
            android:id="@+id/question08"
            style="@style/BodyTextStyle"
            android:text="@string/question08"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="266dp"
                android:padding="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/question08_picture"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/answer08_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer08_1"
                    android:theme="@style/Buttons"/>

                <CheckBox
                    android:id="@+id/answer08_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer08_2"
                    android:theme="@style/Buttons"/>

                <CheckBox
                    android:id="@+id/answer08_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer08_3"
                    android:theme="@style/Buttons"/>

                <CheckBox
                    android:id="@+id/answer08_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer08_4"
                    android:theme="@style/Buttons"/>

                <CheckBox
                    android:id="@+id/answer08_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer08_5"
                    android:theme="@style/Buttons"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/question09"
            style="@style/BodyTextStyle"
            android:text="@string/question09"/>

        <EditText
            android:id="@+id/answer09"
            style="@style/BodyTextStyle"
            android:hint="@string/hintEnterText"
            android:inputType="textCapWords"/>

        <TextView
            android:id="@+id/question10"
            style="@style/BodyTextStyle"
            android:text="@string/question10"/>

        <CheckBox
            android:id="@+id/answer10_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10_1"
            android:theme="@style/Buttons"/>

        <CheckBox
            android:id="@+id/answer10_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10_2"
            android:theme="@style/Buttons"/>

        <CheckBox
            android:id="@+id/answer10_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10_3"
            android:theme="@style/Buttons"/>

        <CheckBox
            android:id="@+id/answer10_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10_4"
            android:theme="@style/Buttons"/>

        <CheckBox
            android:id="@+id/answer10_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer10_5"
            android:theme="@style/Buttons"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="submitAnswers"
            android:text="@string/submitAnswers"
            android:theme="@style/Buttons"/>
    </LinearLayout>
</ScrollView>
